# smooth_alg

./: .gitignore  CMakeLists.txt  README.md  main.cpp
fem_smooth/: fem_pos_deviation_osqp_interface.cpp  fem_pos_deviation_osqp_interface.hpp  fem_pos_deviation_smoother.cpp  fem_pos_deviation_smoother.hpp  smooth.cpp  smooth.hpp
math/util/: algebra.cpp  algebra.hpp  common.cpp  common.hpp  math_utils.cpp
